react-icons + page 이동 버튼 추가

--- a/voca/src/index.css
+++ b/voca/src/index.css
@@ -130,3 +130,15 @@ button {
   height: 40px;
   font-size: 20px;
 }
+
+.paginate {
+	cursor: pointer;
+	margin-top: 2.5rem;
+	display: flex;
+	justify-content: center;
+}
+
+.paginate svg {
+	color: dodgerblue;
+	font-size: 4rem;
+}
